css/style.css
html, body {
  height : 99%;
}

.hidden {
  display : none !important;
}

.touch-link {
  padding          : 0.4em 10px;
  border-radius    : 0.2em;
  border           : dotted 0.1em #cccccc;
  background-color : #efefef;
}

.touch-link.mini {
  padding          : 0.2em 5px;
}

.float-right {
  float : right;
  clear : both;
}

.ui-btn {
  -webkit-user-select : none;
  -khtml-user-select  : none;
  -moz-user-select    : none;
  -ms-user-select     : none;
  -o-user-select      : none;
  user-select         : none;
}

.ui-link, .ui-link:visited {
  text-decoration : none;
  color           : #167eca !important;
}

.ui-link:hover, .ui-link:active {
  text-decoration : none;
  color           : #ec1714 !important;
}

#splash {
  text-align     : center;
  vertical-align : middle;
  display        : none;
  height         : 100%;
}

#splash:before {
  content        : "";
  display        : inline-block;
  height         : 15%;
  vertical-align : middle;
}

#splash-content {
  font-family : 'Open Sans', Helvetica, Arial, sans-serif /*{global-font-family}*/;
  position    : relative;
}

#splash-content img {
  max-width  : 400px;
  max-height : 400px;
}

#main {
  height : 99.9%
}

div[data-role="header"], div[data-role="footer"] {
  z-index  : 1000;
  position : fixed;
  width    : 100%;
}

div[data-role="header"] {
  top : 0;
}

div[data-role="content"] {
  position      : relative;
  margin-top    : 1.9em;
  margin-bottom : 2.9em;
  padding       : 15px 5px;
}

div[data-role="footer"] {
  line-height : 1.6em;
  bottom      : 0;
}

#app-title {
  padding-left : 1em;
}

.title-icon {
  position        : absolute;
  background      : url('../img/favicon@2x.png') no-repeat;
  background-size : 32px 32px;
  width           : 32px;
  height          : 32px;
  top             : 50%;
  left            : 50%;
  margin-top      : -16px;
  margin-left     : -65px;
}

#about {
  position : absolute;
  top      : 0.1em;
  right    : 0.8em;
}

#about a.active {
  display : none;
}

#about h2 .version {
  font-size : 0.5em;
}

#about .poweredby {
  font-size : 0.8em;
}

#clear-faves {
  position   : absolute;
  margin-top : -3.1em;
  right      : 0;
}

#clear-faves > a {
  line-height   : 0.8em;
  border-radius : 0.3em;
}

#large-device-warning {
  display        : none;
  position       : absolute;
  right          : 50%;
  pointer-events : none;
}

#large-device-warning > div {
  right            : -50%;
  color            : #202020;
  position         : relative;
  font-size        : smaller;
  padding          : 1.5em 0.5em;
  margin           : 1em;
  border           : #222222 solid 0.1em;
  background-color : #dcdcdc;
  background-color : rgba(220, 220, 220, 0.7);
  pointer-events   : auto;
}

#large-device-warning-close {
  display          : inline-block;
  cursor           : hand;
  cursor           : pointer;
  width            : 1.2em;
  font-size        : smaller;
  position         : absolute;
  border           : #000000 solid 0.1em;
  background-color : #dddddd;
  top              : 0.3em;
  right            : 0.3em;
  text-align       : center;
  padding          : 0 0.1em;
}

#search-container {
  margin : 0 0 1.4em;
}

#search-input {
  border-radius : 0.3em;
}

.loading {
  margin-top      : 3em;
  background      : url('../img/loader.gif') no-repeat center center;
  height          : 0.8em;
  background-size : 2.5em;
}

#show-more-loading {
  margin-top : 0.5em;
}

.show-more {
  border-radius : 0.3em;
}

.status {
  position        : absolute;
  top             : 50%;
  left            : 0.2em;
  margin-top      : -1.1em;
  width           : 14px;
  height          : 14px;
  background-size : 14px 14px;
}

.yellow .status {
  background-image : url('../img/yellow.png');
}

.red .status {
  background-image : url('../img/red.png');
}

.gray .status {
  background-image : url('../img/gray.png');
}

.green .status {
  background-image : url('../img/green.png');
}

#repositories .status {
  left : 1em;
}

.repo-link {
  padding-left : 2.2em !important;
}

.repo-link .ui-li-count {
  margin-top : -2.0em !important;
}

.repo-arrow {
  right : 15px !important;
}

.build-summary {
  font-size : smaller;
  margin    : 0.3em 0 -0.3em -1.3em;
  color     : #999999;
  padding   : 0.2em 0;
}

.duration-label, .finished-at-label {
  display        : inline-block;
  width          : 11px;
  height         : 14px;
  margin-right   : 1px;
  overflow       : hidden;
  vertical-align : text-bottom;
}

.duration-label {
  background      : url('../img/duration.png') no-repeat;
  background-size : 11px 11px;
}

.finished-at-label {
  background      : url('../img/done.png') no-repeat;
  background-size : 11px 11px;
}

.repo-section {
  margin-top : 0.3em;
}

#repo-header {
  text-overflow : ellipsis;
  white-space   : nowrap;
  overflow      : hidden;
}

#repo-header > a {
  vertical-align : middle;
}

#favorite {
  margin  : -5px;
  display : inline-block;
}

.favorite .ui-icon.ui-icon-star.ui-icon-shadow {
  background-color : #27bb20;
}

#repo-tabs {
  margin     : 0.3em auto 0.2em auto;
  box-shadow : 0 2px 3px -1px #eee;
}

.ui-navbar > ul {
  /* TODO: dunno how to fix the issue... this is only a alleviation attempt */
  min-height : 42px;
}

#previous-tab {
  float         : left;
  margin-bottom : -32px;
}

#repo-tabs > .ui-navbar {
  margin         : 0 36px;
  vertical-align : middle;
}

#next-tab {
  float      : right;
  margin-top : -34px;
}

#repo-tabs > .ui-navbar > ul > li > a {
  border-top-left-radius  : 0.3em;
  border-top-right-radius : 0.3em;
}

#repo-tabs > .ui-navbar > ul > li.ui-block-b > a.ui-btn {
  border-right-width : 1px;
}

.status-container {
  position     : relative;
  height       : 1em;
  width        : 1em;
  display      : inline-block;
  margin-right : 5px;
}

.status-container .status {
  margin-top : -6px;
}

.build {
  font-size : smaller;
}

#build-summary {
  margin        : 0 0 0.2em 0;
  padding       : 0.2em 0.2em 0.5em;
  border        : #d2d2d2 dotted 0.1em;
  border-radius : 0.5em;
  overflow      : auto;
  box-shadow    : 2px 2px 3px #eee;
}

#build-summary dt, #build-summary dd {
  float      : left;
  min-height : 25px;
  margin     : 0;
}

#build-summary dt {
  clear       : left;
  width       : 90px;
  font-weight : bold;
}

#build-summary dd div {
  font-family : monospace;
  overflow-x  : auto;
}

#log-container {
  width    : 98%;
  margin   : 0 auto;
  position : relative;
}

#log-container #tail {
  z-index         : 99;
  position        : absolute;
  display         : block;
  top             : 0;
  right           : 2px;
  margin          : 13px 10px 0 0;
  padding         : 0 2px 0 3px;
  color           : #666666;
  text-shadow     : 1px 1px 0px #ffffff;
  font-family     : "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size       : 11px;
  line-height     : 14px;
  text-decoration : none;
  white-space     : nowrap;
  border          : 1px solid #bbbbbb; border-top-color : #dddddd;
  border-radius   : 8px;
  background      : -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(100%, #e0e0e0));
  background      : linear-gradient(#ffffff, #e0e0e0);
}

#log-container #tail.active .tail-status {
  background-color : #27bb20;
}

#log-container #tail.active:hover .tail-status {
  background-color : #27bb20;
}

#log-container #tail .tail-status {
  display          : inline-block;
  margin-right     : 1px;
  width            : 8px;
  height           : 8px;
  background-color : #aaaaaa;
  border-radius    : 4px;
  box-shadow       : #ffffff 1px 1px 2px;
}

#log-container #tail label {
  cursor  : pointer;
  padding : 0.3em;
}

pre#log {
  position         : relative;
  clear            : left;
  min-height       : 12px;
  margin-top       : 1em;
  padding          : 15px 0;
  color            : #ffffff;
  font-family      : monospace;
  font-size        : 12px;
  line-height      : 18px;
  white-space      : pre-wrap;
  word-wrap        : break-word;
  background-color : #333333;
  border           : 1px solid #dddddd;
  border-radius    : 4px;
  counter-reset    : line-numbering;
  box-shadow       : 1px 1px 2px #bbb;
}

pre#log p {
  padding     : 0 5px 0 40px;
  margin      : 0;
  min-height  : 16px;
  text-shadow : none;
}

pre#log p a {
  color           : #666666;
  margin-left     : -33px;
  cursor          : pointer;
  text-decoration : none;
}

pre#log p a:before {
  content           : counter(line-numbering);
  counter-increment : line-numbering;
  padding-right     : 0.8em;
  text-align        : right;
}

.label-text, #build-summary dt {
  color : #999999;
}

div.list {
  padding       : 3px;
  margin        : 3px 0;
  border        : #d2d2d2 dotted 0.1em;
  border-radius : 0.5em;
  box-shadow    : 1px 1px 2px #eee;
}

div.list > div {
  border-radius : 0.5em;
  border        : 0.1em solid #efefef;
  margin        : 0 0 3px 0;
  box-shadow    : 1px 1px 1px #eee;
}

div.list > div.green {
  background-color : #dcffdc;
}

div.list > div.red {
  background-color : #ffdcdc;
}

div.list > div.gray {
  background-color : #d7d9db;
}

div.list > div.yellow {
  background-color : #ffffe1;
}

.build-link, .job-link {
  display         : block;
  padding         : 0.1em;
  text-decoration : none;
  color           : #333;
}

div.list .cell {
  display   : inline-block;
  max-width : 100%;
  margin    : 2px;
}

div.list .cell .cell-block {
  overflow      : hidden;
  white-space   : nowrap;
  text-overflow : ellipsis;
}

div.list .number.cell, div.list .committer.cell {
  color       : #444;
  font-weight : bold;
}

div.list .cell .build-summary {
  margin : 0.2em;
}

div.list .commit.cell {
  border-bottom : dotted 0.1em #ccc;
}

div.list .message.cell {
  padding : 0 3px;
}

div.list .cell .build-summary .label-text {
  font-size : larger;
}

.to-top {
  color           : #666666;
  text-decoration : none;
  white-space     : nowrap;
  float           : right;
  padding         : 0.1em;
}

.to-top:after {
  content       : "";
  position      : relative;
  bottom        : 0.9em;
  width         : 0;
  height        : 0;
  margin-left   : 0.3em;
  border-left   : 8px solid transparent;
  border-right  : 8px solid transparent;
  border-bottom : 8px solid #666666;
}

.emoji {
  vertical-align : middle;
  width          : 20px;
  height         : 20px;
}

.ansi .bold {
  font-weight : bold; }

.ansi .italic {
  font-style : italic; }

.ansi .black {
  color : black; }

.ansi .red {
  color : red; }

.ansi .green {
  color : lime; }

.ansi .yellow {
  color : yellow; }

.ansi .blue {
  color : blue; }

.ansi .magenta {
  color : magenta; }

.ansi .cyan {
  color : cyan; }

.ansi .white {
  color : white; }

.ansi .black.bright {
  color : #999999; }

.ansi .bg-black {
  background-color : black; }

.ansi .bg-red {
  background-color : red; }

.ansi .bg-green {
  background-color : lime; }

.ansi .bg-yellow {
  background-color : yellow; }

.ansi .bg-blue {
  background-color : blue; }

.ansi .bg-magenta {
  background-color : magenta; }

.ansi .bg-cyan {
  background-color : cyan; }

.ansi .bg-white {
  background-color : white; }

@media (min-width: 768px) {
  #large-device-warning {
    display : block;
  }
}

